# just_for_fun

./: .gitignore  README.md  docker-compose.yaml
app/: .dockerignore  Dockerfile  Dockerfile-dev  Dockerfile-test  alembic.ini  main.py  pyproject.toml  test_main.py
app/app/: auth.py  exceptions.py  handlers.py  lifespan.py  middlewares.py  pg.py  settings.py
app/app/api/: __init__.py  organisations.py  ping.py
app/app/models/: activities.py  buildings.py  common.py  organisations.py
app/app/service/: organisations.py
app/migrations/: env.py
app/migrations/versions/: 3fed549b4455_gen_indexes.py  cd870344a260_init_tables.py  cfdbb32f1f66_init_tables.py
app/tests/: load_fake_data.py
